# ciot_c

./: CHANGELOG.md  CMakelists.txt  Makefile  changes.md  library.json  sparkplug_b.options
common/: Common.cmake  common.mk
examples/ciot_cli/: CMakeLists.txt
examples/ciot_device/: CMakeLists.txt
examples/ciot_nrf_dfu_master/: CMakeLists.txt
examples/ciot_nrf_dfu_master/main/: CMakeLists.txt  main.c
examples/ciota/: CMakelists.txt
examples/cli/: CMakelists.txt
examples/device/: CMakelists.txt
examples/esp32/: sdkconfig
examples/mbus_server/: sdkconfig
examples/nrf/: Makefile  ciot_custom_config.h  main.h
examples/platformio/: CMakeLists.txt  platformio.ini
examples/proxy/: CMakelists.txt  main.c  main.h
examples/sparkplugb/: CMakelists.txt  main.c  main.h
include/: ciot.h  ciot_ble_scn.h  ciot_config.h  ciot_decoder.h  ciot_decoder_s.h  ciot_decoder_slip.h  ciot_dfu_nrf.h  ciot_err.h  ciot_eth.h  ciot_gpio.h  ciot_http_server.h  ciot_iface.h  ciot_log.h  ciot_mbus.h  ciot_mqtt_client.h  ciot_ntp.h  ciot_serializer.h  ciot_storage_auto.h  ciot_storage_fs.h  ciot_sys.h  ciot_types.h  ciot_uart.h  ciot_wifi.h  ciot_wifi_multi.h
make/: scripts.mk
scripts/: Makefile  mqtt_translator.py
src/: mongoose.h  nanomodbus.h  pb.h  pb_decode.h  pb_encode.h
src/common/: ciot_ble_adv_base.c  ciot_ble_base.c  ciot_ble_scn_base.c  ciot_decoder_s.c  ciot_decoder_slip.c  ciot_dfu_nrf.c  ciot_err.c  ciot_eth_base.c  ciot_gpio_base.c  ciot_http_client_base.c  ciot_http_server_base.c  ciot_mbus_client.c  (+13 more)
tests/: CMakeLists.txt  ciot_custom_config.h  main.c
(+221 files in other folders)
